<resources>
    <string name="app_name">Final Project Mobile</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerButton">Register</string>
    <string name="free">Free</string>
    <string name="premium">Premium ($4.99/month)</string>
    <string name="gold">Gold ($9.95/month)</string>
    <string name="register"><u>Register as a new user</u></string>
    <string name="anonymous"><u>Continue anonymously</u></string>
    <string name="administrator"><u>Continue as an administrator</u></string>
    <string name="registerAdministrator"><u>Register as a new administrator</u></string>
    <string name="welcome">Welcome</string>
    <string name="welcomeBack">Welcome back</string>
    <string name="welcomeAnonymous">Welcome anonymous user</string>
    <string name="profile">View my profile</string>
    <string name="browse">Browse uploaded photos</string>
    <string name="users">See list of users</string>
    <string name="list">List of registered users</string>
    <string name="isUser">User</string>
    <string name="isAdministrator">Administrator</string>
    <string name="help">*</string>
    <string name="currentSubText">Your current subscription:</string>
    <string name="changeSubText">Change subscription:</string>
    <string name="freeText">FREE: $0/month\nYou can upload one photo per day and you cannot change
    the description or the hashtags once the photo is uploaded.</string>
    <string name="premiumText">PREMIUM: $4.99/month\nYou can upload 10 photos per week and you can
    change the description and hashtags one time once the photo is uploaded.</string>
    <string name="goldText">GOLD: $9.95/month\nYou can upload as many photos as you want and you can
    change the description and hashtags as many times as you want once the photo is uploaded.</string>
    <string name="changeSub">Change</string>
    <string name="back">Back to home</string>
    <string name="uploadNew">Upload a new photo</string>
    <string name="upload">Upload image</string>
    <string name="description">Description</string>
    <string name="hashtags">Hashtags (seperated by a #)</string>
    <string name="choose">Choose image</string>
    <string name="resize">Resize image</string>
    <string name="width">New width</string>
    <string name="height">New height</string>
    <string name="ok">Confirm</string>
    <string name="saveAs">Save photo as:</string>
    <string name="bmp">BMP</string>
    <string name="jpeg">JPEG</string>
    <string name="png">PNG</string>
    <string name="logout">Log out</string>
    <string name="cleanUsers">Clean user table</string>
    <string name="cleanPhotos">Clean photo table</string>
</resources>